js262/test/language/statements/async-function/early-errors-declaration-await-in-formals-default.js


/*---
author: Brian Terlson <brian.terlson@microsoft.com>
esid: pending
description: It is a SyntaxError if FormalParameters' default expressions contains await
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
async function foo (x = await) {  }
